# xjm_bike

dyn_pkg/: CMakeLists.txt  package.xml
dyn_pkg/config/: bicycle_effortControllers.yaml
dyn_pkg/include/fed/: RobotFeed.h  dynamic_solution.hpp
dyn_pkg/include/para/: Bicycle_Parameters.yaml  BikeParameters.hpp
dyn_pkg/include/ref/: RefTrajes.h
dyn_pkg/include/ross/: RosInterface.h
dyn_pkg/include/wbc/: Formulations.h
dyn_pkg/include/wbc/constraints/: Constraint_Bound.h  Constraint_Equality.h  Constraint_InEquality.h  Constraint_Target.h  Constraint_Zero.h  Constraints_Base.h
dyn_pkg/include/wbc/dataPlot/: DataPlot.h
dyn_pkg/include/wbc/dataRW/: DataRW.h
dyn_pkg/include/wbc/fwd/: fwd.hpp
dyn_pkg/include/wbc/qpSolve/: QpWbc.h
dyn_pkg/include/wbc/tasks/: BaseTasksConst.h  ConstDynamicConsistence.h  ConstJointsTauLimit.h  TaskAll.h
dyn_pkg/include/wbc/trajes/: TrajEuc.hpp
dyn_pkg/launch/: bicycle_control_node.launch  bicycle_models.launch
dyn_pkg/src/: main.cpp  test.cpp
dyn_pkg/src/fed/: RobotFeed.cpp  dynamic_solution.cpp
dyn_pkg/src/ref/: RefTrajes.cpp
dyn_pkg/src/ross/: RosInterface.cpp
dyn_pkg/src/wbc/: Formulations.cpp
dyn_pkg/src/wbc/constraints/: Constraint_Bound.cpp  Constraint_Equality.cpp  Constraint_InEquality.cpp  Constraint_Target.cpp  Constraint_Zero.cpp  Constraints_Base.cpp
dyn_pkg/src/wbc/dataPlot/: DataPlot.cpp
dyn_pkg/src/wbc/dataRW/: DataRW.cpp
dyn_pkg/src/wbc/qpSolve/: QpWbc.cpp
dyn_pkg/src/wbc/tasks/: BaseTasksConst.cpp  ConstDynamicConsistence.cpp  ConstJointsTauLimit.cpp  TaskAll.cpp
dyn_pkg/src/wbc/trajes/: TrajEuc.cpp
